2017-02-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed the command line argument parsing

2017-01-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added patches from Pavel Rochnyak for the issuer certificate cache patch
	                  and the wildcard support in alternative names

2016-12-23  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added patch to specify multiple CNs (see https://github.com/matteocorti/check_ssl_cert/pull/35) 

2016-12-13  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed a minor problem with --debug

2016-12-06  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed a problem when specifying a CN beginnging with *

2016-12-04  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed problem when file is returing PEM certificate on newer Linux distributions

2016-09-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: enabling proxy support in the OCSP check (thanks to Leynos)

2016-08-04  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: disabling OCSP checks when no issuer URI is found

2016-07-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed case insensitive comparison of CNs

2016-07-29  https://github.com/bb-Ricardo

	* check_ssl_cert: calculate expiration primary with date

2016-07-12  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed the parsing of the CN field

2016-06-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed OSCP header on old OpenSSL versions

2016-06-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: OCSP is now default

	* check_ssl_certe: Fixed OCSP host

2016-06-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Better curl error handling

2016-06-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added an option to clear the cached result at SSLLabs

2016-06-01  juckerf (https://github.com/juckerf)

	* check_ssl_cert: Increase control over which SSL/TLS versions to use

2016-05-17  Matteo Corti  <matteo@corti.li>
