@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=1.38.2
+VERSION=1.39.0
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,serial,modulus,serial,hash,email,ocsp_uri,fingerprint,"
@@ -946,11 +946,7 @@ main() {
     SERVERNAME=
     if ${OPENSSL} s_client not_a_real_option 2>&1 | grep -q -- -servername ; then
 	
-        if [ -n "${COMMON_NAME}" ] && [ "${COMMON_NAME}" = "$(echo "${COMMON_NAME}" | tr -d ' ')" ] ; then
-            SERVERNAME="-servername ${COMMON_NAME}"
-        else
-            SERVERNAME="-servername ${HOST}"
-        fi
+        SERVERNAME="-servername ${HOST}"
 
 	if [ -n "${DEBUG}" ] ; then
             echo "[DBG] '${OPENSSL} s_client' supports '-servername': using ${SERVERNAME}"
