@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH "check_ssl_cert" 1 "February, 2017" "1.38.2" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "February, 2017" "1.39.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -76,7 +76,7 @@ Forces a new check by SSL Labs (see -L)
 append the specified comma separated (no spaces) list of attributes to the plugin output on additional lines.
 Valid attributes are: enddate, startdate, subject, issuer, modulus, serial, hash, email, ocsp_uri and fingerprint. 'all' will include all the available attributes.
 .TP
-.BR "-n,---cn" " name"
+.BR "-n,--cn" " name"
 pattern to match the CN of the certificate (can be specified multiple times)
 .TP
 .BR "   --no_ssl2"
