@@ -1,4 +1,4 @@
-%define version          1.38.2
+%define version          1.39.0
 %define release          0
 %define sourcename       check_ssl_cert
 %define packagename      nagios-plugins-check_ssl_cert
@@ -45,6 +45,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man1/%{sourcename}.1*
 
 %changelog
+* Thu Feb  2 2017 Matteo Corti <matteo@corti.li> - 1.39.0-0
+- Updated to 1.39.0
+
 * Thu Feb  2 2017 Matteo Corti <matteo@corti.li> - 1.38.2-0
 - Updated to 1.38.2
 
