@@ -1,3 +1,4 @@
+2017-02-02 Version 1.39.0: Fixed a bug related to SNI
 2017-02-02 Version 1.38.2: Fixed a bug in the command line argument parsing
 2017-01-29 Version 1.38.1: Small corrections in the documentation
 2017-01-28 Version 1.38.0: Added support for wildcards in alternative names and caching of the issuer certificate
